WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118000
Flex boxes (both old and new) don't handle max-height images correctly
https://bugs.webkit.org/show_bug.cgi?id=118000
Summary
Flex boxes (both old and new) don't handle max-height images correctly
Dave Hyatt
Reported
2013-06-25 13:06:39 PDT
Flex boxes (both old and new) don't handle max-height images correctly. They need to pick up the percentage height descendant code that the blocks base class uses, and that code also needs to be improved to dirty pref widths when percentage heights are involved.
Attachments
Patch
(830.54 KB, patch)
2013-06-25 13:12 PDT
,
Dave Hyatt
bdakin
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-01 for mac-mountainlion
(655.93 KB, application/zip)
2013-06-25 16:01 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-09 for mac-mountainlion-wk2
(489.21 KB, application/zip)
2013-06-25 18:46 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from APPLE-EWS-6 for win-future
(798.33 KB, application/zip)
2013-06-25 22:02 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2013-06-25 13:12:13 PDT
Created
attachment 205419
[details]
Patch
Build Bot
Comment 2
2013-06-25 16:01:17 PDT
Comment on
attachment 205419
[details]
Patch
Attachment 205419
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/987059
New failing tests: tables/mozilla_expected_failures/bugs/
bug85016
.html
Build Bot
Comment 3
2013-06-25 16:01:20 PDT
Created
attachment 205426
[details]
Archive of layout-test-results from webkit-ews-01 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-01 Port: mac-mountainlion Platform: Mac OS X 10.8.3
Build Bot
Comment 4
2013-06-25 18:46:52 PDT
Comment on
attachment 205419
[details]
Patch
Attachment 205419
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/986053
New failing tests: tables/mozilla_expected_failures/bugs/
bug85016
.html
Build Bot
Comment 5
2013-06-25 18:46:54 PDT
Created
attachment 205437
[details]
Archive of layout-test-results from webkit-ews-09 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-09 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.3
Build Bot
Comment 6
2013-06-25 22:02:04 PDT
Comment on
attachment 205419
[details]
Patch
Attachment 205419
[details]
did not pass win-ews (win): Output:
http://webkit-queues.appspot.com/results/967190
New failing tests: fast/frames/seamless/seamless-nested-crash.html
Build Bot
Comment 7
2013-06-25 22:02:08 PDT
Created
attachment 205449
[details]
Archive of layout-test-results from APPLE-EWS-6 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: APPLE-EWS-6 Port: win-future Platform: CYGWIN_NT-6.1-WOW64-1.7.20-0.266-5-3-i686-32bit
Dave Hyatt
Comment 8
2013-06-26 10:32:10 PDT
Landed in
r151997
.
Csaba Osztrogonác
Comment 9
2013-06-26 11:42:36 PDT
(In reply to
comment #8
)
> Landed in
r151997
.
It broke the !ENABLE(SVG) builds: /ramdisk/qt-linux-release-minimal/build/Source/WebCore/rendering/RenderBlock.cpp: In member function ‘void WebCore::RenderBlock::dirtyForLayoutFromPercentageHeightDescendants()’: /ramdisk/qt-linux-release-minimal/build/Source/WebCore/rendering/RenderBlock.cpp:2542:22: error: ‘class WebCore::RenderBox’ has no member named ‘hasAspectRatio’ The problem is that RenderObject::hasAspectRatio() is inside !ENABLE(SVG) ifdef guard. It shouldn't be used outside !ENABLE(SVG) guard. Could you fix it, please?
Gábor Ábrahám
Comment 10
2013-06-27 02:42:39 PDT
The css3/flexbox/image-percent-max-height.html ref html failed on Qt, Efl, and Gtk bots. Could you check it please?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug